# pulse

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
config/: example.yaml
src/: args.rs  cli.rs  clrs.rs  config.rs  install.rs  main.rs  prompt.rs
tests/: integration.rs
