[package]
name = "pulse"
version = "0.1.0"
edition = "2024"
description = "Pulse – A fast, configurable Rust PS1 prompt engine for modern shells. "
license = "MIT"

[dev-dependencies]
serial_test = "3"
tempfile = "3"

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
clap_complete = "4.4"
owo-colors = { version = "4.0", features = ["supports-colors"] }
gix = { version = "0.60", features = ["parallel"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
users = "0.11"
serde_yml = "0.0.12"
dirs = "6.0.0"
hostname = "0.3"
log = "0.4"
env_logger = "0.10"
supports-color = "3"
crossterm = "0.28"
unicode-width = "0.2"

[profile.release]
opt-level = "z"  # Optimize for size (more aggressive than "s")
lto = true       # Enable Link Time Optimization
codegen-units = 1 # Better optimizations, but slower compile times
panic = "abort"  # Removes stack unwinding code
strip = true     # Automatically strip symbols from the binary (Rust 1.59+)

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/pulse", dest = "/usr/bin/pulse", mode = "755" },
  { source = "completions/pulse.bash", dest = "/usr/share/bash-completion/completions/pulse", mode = "644" },
  { source = "completions/pulse.zsh", dest = "/usr/share/zsh/site-functions/_pulse", mode = "644" },
]
